--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=live_betting_dev
+POSTGRES_USER=postgres
+POSTGRES_PW=postgres
+POSTGRES_DB=live_betting_dev
+PGADMIN_MAIL=
+PGADMIN_PW=
